--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A place to search info about museums all over India.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Vinay Matta",
   "license": "ISC",
