--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "mongoose": "^5.10.15",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "router": "^1.3.5",
-    "sanitize-html": "^2.2.0"
+    "sanitize-html": "^2.2.0",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   }
 }
